subpage_solar.css
@charset "utf-8";
.page_Content {
	margin-top: 75px;	/*background-image: url(url), -webkit-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
	background-image: url(url), -moz-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
	background-image: url(url), -o-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
	background-image: url(url), linear-gradient(180deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100.00%);*/
	margin-left: 75px;
}
.Background {
	position: absolute;
	overflow: hidden;
	width: 100vw;
	height: 100vh;
	left: 0px;
	top: 0px;
	
}
.borderLayout {
	
	width: 506px;
	height: 336px;


	position: fixed;
	transition: 0.4s;
}

.Rectangle_11_Class{
	
	width: 506px ;
	height: 336px;
	position: fixed;
	transition: 0.4s;
}
.heading{
	margin-top: 64px;
	margin-left: 20px;
	width: 506px ;
	height: 336px;
}
.heading_txt {
	position: absolute;
	overflow: hidden;
	width: 473px;
	white-space: nowrap;
	text-align: left;
	font-family: Rockwell;
	font-style: normal;
	font-weight: normal;
	font-size: 80px;
	color: rgba(0,0,0,1);
	letter-spacing: -0.27px;
	margin-top: 35px;
	margin-left: 18px;
	position: fixed;
}

